<resources>
    <string name="app_name">Fallout File Manager</string>
    <string name="toolbar_name">Fallout File Manager</string>
    <string name="info_name">Fallout File Manager</string>
    <string name="info_version">v.1.1</string>
    <string name="market_link">market://details?id=</string>
    <string name="web_link">http://play.google.com/store/apps/details?id=</string>
    <string name="remote_access">Remote access</string>
    <string name="upload">Upload</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="choose">CHOOSE OPTION:</string>
    <string name="sort_list">SORT LIST:</string>
    <string name="old_new">from oldest to newest</string>
    <string name="new_old">from newest to oldest</string>
    <string name="a_z">from A to Z</string>
    <string name="z_a">from Z to A</string>
    <string name="info">Info</string>
    <string name="rename">Rename</string>
    <string name="ok">OK</string>
    <string name="bytes">B</string>
    <string name="kilobytes">KB</string>
    <string name="megabytes">MB</string>
    <string name="gigabytes">GB</string>
    <string name="empty_word">empty</string>
    <string name="new_file">New file</string>
    <string name="new_folder">New folder</string>
    <string name="settings">Settings</string>
    <string name="new_folder_name">New_folder</string>
    <string name="new_file_name">New_file</string>
    <string name="no_folder_created">No folder has been created</string>
    <string name="no_file_created">No file has been created</string>
    <string name="insert_new_name">Insert the new name:</string>
    <string name="are_you_sure_single">Are you sure you want to delete this object?</string>
    <string name="are_you_sure_multiple">Are you sure you want to delete\u0020</string>
    <string name="are_you_sure_items">\u0020objects?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="return_button">RETURN</string>
    <string name="saving_changes">Do you want to save changes?</string>
    <string name="name_exists">name you inserted already exists</string>
    <string name="such_name_exists">The file/directory with such name already exists</string>
    <string name="small_large">from smallest to largest</string>
    <string name="large_small">from largest to smallest</string>
    <string-array name="menu_items">
        <item>Paste</item>
        <item>Sort</item>
        <item>Search</item>
        <item>New folder</item>
        <item>New file</item>
        <item>Info</item>
    </string-array>
    <string name="info_thanks">Thank you for using our app!</string>
    <string name="info_about_us">We are MD Group - a team of mobile app developers with the broad scope of competence.
        We love to translate ideas into reality. That is why we are always open to something new.</string>
    <string name="info_rate">Your feedback on our app will greatly help to make it better!</string>
    <string name="info_rate_button">RATE THE APP</string>
    <string name="info_offers">We are open to collaboration! If you have any ideas or offers please feel free to contact us:</string>
    <string name="info_contacts">E-mail: md101110group@gmail.com</string>
    <string name="no_file_to_paste">no file to paste</string>
    <string name="select_dst_folder">please select destination folder</string>
    <string name="info_share">Maybe this app would be interesting for some of your friends?</string>
    <string name="info_share_button">SHARE THE APP</string>
    <string name="saved">saved</string>
    <string name="share_via">Share via:</string>

</resources>
