<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_sort"
        app:showAsAction="always"
        android:icon="@drawable/sort"
        android:title="@string/upload">
    </item>
    <item
        android:id="@+id/menu_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always"
        android:icon="@drawable/search"
        android:title="@string/search">
    </item>
    <item
        android:id="@+id/menu_paste"
        app:showAsAction="always"
        android:icon="@drawable/paste2"
        android:title="@string/paste">
    </item>
    <item
        android:id="@+id/new_folder"
        app:showAsAction="always"
        android:icon="@drawable/new_folder2"
        android:title="@string/new_folder">
    </item>
    <item
        android:id="@+id/new_file"
        app:showAsAction="ifRoom"
        android:icon="@drawable/new_file2"
        android:title="@string/new_file">
    </item>
    <item
        android:id="@+id/menu_settings"
        app:showAsAction="ifRoom"
        android:icon="@drawable/settings2"
        android:title="@string/settings">
    </item>
    <item
        android:id="@+id/menu_info"
        app:showAsAction="ifRoom"
        android:icon="@drawable/info"
        android:title="@string/info">
    </item>
</menu>