<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/editor_save"
        app:showAsAction="always"
        android:icon="@drawable/save_white"
        android:title="Save">
    </item>
    <item
        android:id="@+id/editor_find"
        app:showAsAction="never"
        android:icon="@drawable/search"
        android:title="Find">
    </item>
    <item
        android:id="@+id/editor_paste"
        app:showAsAction="always"
        android:icon="@drawable/paste2"
        android:title="@string/paste">
    </item>
    <item
        android:id="@+id/editor_copy"
        app:showAsAction="always"
        android:icon="@drawable/copy_white"
        android:title="@string/copy">
    </item>
    <item
        android:id="@+id/editor_cut"
        app:showAsAction="always"
        android:icon="@drawable/cut_white"
        android:title="@string/cut">
    </item>
    <item
        android:id="@+id/editor_cursor_left"
        app:showAsAction="never"
        android:icon="@drawable/settings2"
        android:title="@string/settings">
    </item>
    <item
        android:id="@+id/editor_cursor_right"
        app:showAsAction="never"
        android:icon="@drawable/settings2"
        android:title="@string/settings">
    </item>
</menu>